# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = github-fullname
version = 2019.02.27
url = https://github.com/looking-for-a-job/github-fullname
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = github

[options]
install_requires = 
	setuptools
scripts = 
	scripts/github-fullname
