# https://pypi.org/project/setupcfg-generator/
[metadata]
name = github-fullname
version = 2019.3.22
url = https://github.com/looking-for-a-job/github-fullname
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = github

[options]
install_requires = 
	setuptools
scripts = 
	scripts/github-fullname
